Передалано на SpringBoot